syntax = "proto3";
package comdex.tokenmint.v1beta1;
import "gogoproto/gogo.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/comdex-official/comdex/x/tokenmint/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

service Msg {
    
    rpc MsgMintNewTokens(MsgMintNewTokensRequest) returns (MsgMintNewTokensResponse);
}
//Will become governance proposal- will trigger token minting & sending
message MsgMintNewTokensRequest {
    string from    = 1 [ (gogoproto.moretags) = "yaml:\"from\"" ];
    uint64 app_mapping_id   = 2 [(gogoproto.moretags) = "yaml:\"app_mapping_id\"",
    (gogoproto.customname) = "AppMappingId"];
    uint64 asset_id = 3 [
      (gogoproto.customname) = "asset_id",
      (gogoproto.moretags)   = "yaml:\"asset_id\""
    ];
}
  
  
  message MsgMintNewTokensResponse{}